fixing button alignment in all checkins

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -301,6 +301,7 @@ body .commentModal {
 
 #locations_links {
 	margin-left: 0.5%;
+	width: 100%;
 }
 
 .filter_links {
